# simmer

./: Cargo.toml
docs/: todo.md
src/: error.rs  lib.rs
tests/: integration.rs  observability.rs
