[package]
name = "simmer"
version = "0.1.0"
authors = ["freesig <tomrgowan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.18", features = ["full"] }
tracing = "0.1.13"
thiserror = "1.0.15"
lazy_static = "1.4.0"
futures = "0.3.5"

[dev-dependencies]
tracing-futures = "0.2.4"
tracing-subscriber = "0.2.5"
tracing-serde = "0.1.1"
tracing-core = "0.1.10"
serde_json = "1.0.51"
chrono = "0.4.11"
