[package]
name = "simmer"
version = "0.1.0"
authors = ["freesig <tomrgowan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.3", features = ["full"] }
tracing = "0.1.21"
thiserror = "1.0.22"
lazy_static = "1.4.0"
futures = "0.3.8"
tracing-futures = "0.2.4"
observability = { path = "../observability/" }

[dev-dependencies]
